# dcmotorcaninterface

./: CMakeLists.txt  README.md  log.cpp  log.h  main.cpp  muscleDriverCANInterface.cpp  muscleDriverCANInterface.h  phidget.h  userInterface.h
source/: controlCycle.cpp  controlCycle.h  log.cpp  log.h  muscleDriverCANInterface.cpp  muscleDriverCANInterface.h  userInterface.cpp
source/motorDriverBoardConfiguration/: readme-mDBConfig.md
